--- a/src/app/components/top-bar/top-bar.component.css
+++ b/src/app/components/top-bar/top-bar.component.css
@@ -1,63 +1,27 @@
-.topBar{
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-font-style: italic;
- color:white;
- padding: 15px;
-
+a {
+	text-decoration: none;
+	color: white;
 }
 
-
-
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  width: 50%;
+a:hover,
+a:active {
+	color: gray;
 }
 
-
-.flex-container {
-  display: flex;
-  background-color: DodgerBlue;
-  justify-content: stretch;
+ul {
+	list-style-type: none;
 }
 
-/* .flex-container > div {
-  background-color: #f1f1f1;
-  margin: 10px;
-  padding: 20px;
-  font-size: 30px;
-} */
-
-/* DropDown Menu */
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-  z-index: 1000;
+mat-toolbar {
+	border-radius: 3px;
 }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1000;
+@media (max-width: 959px) {
+	mat-toolbar {
+		border-radius: 0px;
+	}
 }
 
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  z-index: 100;
+.title {
+	font-size: 18px;
 }
-
-.dropdown-content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
