Added generic pie-chart component and started working on home view analytics chart row

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div fxFlex fxLayout fxLayoutGap="20px">
+	<mat-card>
+		<app-pie-chart></app-pie-chart>
+	</mat-card>
+	<mat-card>
+		<app-pie-chart></app-pie-chart>
+	</mat-card>
+</div>
