--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,54 @@
-<button (click) ='sendMsg()'>Click to Subscribe</button>
-<mat-grid-list cols="4" rowHeight="100px">
-  <mat-grid-tile
-    class="title-tem"
-    *ngFor="let tile of tiles"
-    [colspan]="tile.cols"
-    [rowspan]="tile.rows"
-    [style.background]="tile.color">
+<button (click) ='getDashBoard()'>Click to Subscribe Dashboard</button>
 
-    <app-top-bar *ngIf="tile.text === 'TopBar'"></app-top-bar>
-    <app-messages-list *ngIf="tile.text === 'MessageList'"></app-messages-list>
-    <app-dashboard-analytics *ngIf="tile.text === 'DashboarAnalytics'"></app-dashboard-analytics>
-    <app-messages-details
-      *ngIf="tile.text === 'MessageDetails'"
-    ></app-messages-details>
-    <app-message-center
-      *ngIf="tile.text === 'MessageCenter'"
-    ></app-message-center>
-    <app-event-details  *ngIf="tile.text === 'EventDetails'"></app-event-details>
-    <app-dashboard-analytics *ngIf="tile.text === 'DashboradAnalytics'"></app-dashboard-analytics>
-  </mat-grid-tile>
-</mat-grid-list>
+<div class="header">
+  <h1>Chania</h1>
+</div>
+<div class="row">
+  <div class="col-3 col-s-3 menu">
+    <ul>
+      <li>Inbox({{this.inbox}})</li>
+      <li>Read</li>
+      <li>Answered ({{answered}})</li>
+      <li>Duplicate ({{duplicate}})</li>
+      <li>Rejected ({{rejected}})</li>
+    </ul>
+  </div>
+
+  <div class="col-6 col-s-9" style='font-size: .3em !important;'>
+    <div style="overflow-x:auto;">
+      <table>
+        <tr >
+          <th>#</th>
+          <th>User</th>
+          <th>Message</th>
 
 
-<!-- Copyright 2019 Google LLC. All Rights Reserved.
-    Use of this source code is governed by an MIT-style license that
-    can be found in the LICENSE file at http://angular.io/license -->
+        </tr>
+        <tr *ngFor='let m of messages'>
+          <td>{{m.userId}}</td>
+          <td>{{m.message}}</td>
+
+
+        </tr>
+      </table>
+    </div>  </div>
+
+  <div class="col-3 col-s-12">
+    <div class="aside">
+      <h2>Subscriber</h2>
+      <p>{{subscriber}}</p>
+      <h2>Number of Messages</h2>
+      <p>{{inbox}}</p>
+      <h2>Rejected</h2>
+      <p>{{rejected}}</p>
+      <h2>Duplicate</h2>
+      <p>{{duplicate}}</p>
+      <h2>Answered</h2>
+      <p>{{answered}}</p>
+    </div>
+  </div>
+</div>
+
+<div class="footer">
+  <p>Resize the browser window to see how the content respond to the resizing.</p>
+</div>
