WIP: Create event dialog

--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,24 +1,28 @@
 <mat-toolbar color="primary">
-	<div fxHide.gt-xs>
-		<button mat-icon-button (click)="toggleSidenav()">
-			<mat-icon>menu</mat-icon>
-		</button>
-	</div>
-	<button mat-button class="title">Event Monitor Dashboard</button>
-	<div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
-		<ul fxLayout fxLayoutGap="20px">
-			<li class="toolbar-icon" [matMenuTriggerFor]="menu">
-				<button mat-icon-button>
-					<mat-icon>person_outline</mat-icon>
-				</button>
-			</li>
-		</ul>
-	</div>
+  <div fxHide.gt-xs>
+    <button mat-icon-button (click)="toggleSidenav()">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </div>
+  <button mat-button class="title">Event Monitor Dashboard</button>
+  <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
+    <ul fxLayout fxLayoutGap="20px">
+      <li class="toolbar-icon" (click)="toggleCreateEventOverlay()">
+        <button mat-icon-button>
+          <mat-icon>event_available</mat-icon>
+        </button>
+      </li>
+      <li class="toolbar-icon" [matMenuTriggerFor]="menu">
+        <button mat-icon-button>
+          <mat-icon>person_outline</mat-icon>
+        </button>
+      </li>
+    </ul>
+  </div>
 </mat-toolbar>
 
 <mat-menu #menu="matMenu">
-	<button mat-menu-item>Item 1</button>
-	<button mat-menu-item>Item 2</button>
+  <button mat-menu-item>Sign Out</button>
 </mat-menu>
 
 <!-- <div class='topBar'>
