--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,16 +1,21 @@
-<div fxFlex fxLayout="row" fxLayout.xs="column" fxFlexFill fxLayoutGap="20px">
-  <app-analytics-card [contextType]="'Subscribers'" [numberTotal]="'121'"></app-analytics-card>
-  <app-analytics-card [contextType]="'Questions Answered'" [numberTotal]="'11'"></app-analytics-card>
-  <mat-card>
-    <app-pie-chart [data]="accepted" [categoryField]="'category'" [valueField]="'value'" [id]="'accepted'"
-      [graphTitle]="'Answered Questions'"></app-pie-chart>
-  </mat-card>
-  <mat-card>
-    <app-pie-chart [data]="rejected" [categoryField]="'category'" [valueField]="'value'" [id]="'rejected'"
-      [graphTitle]="'Rejected Questions'"></app-pie-chart>
-  </mat-card>
-  <mat-card>
-    <app-pie-chart [data]="duplicated" [categoryField]="'category'" [valueField]="'value'" [id]="'duplicated'"
-      [graphTitle]="'Duplicated Questions'"></app-pie-chart>
-  </mat-card>
+<div fxLayout="column" fxLayoutGap="20px">
+  <div fxFlex fxLayout="row" fxLayout.xs="column" fxFlexFill fxLayoutGap="20px">
+    <app-analytics-card [contextType]="'Subscribers'" [numberTotal]="'121'"></app-analytics-card>
+    <app-analytics-card [contextType]="'Questions Answered'" [numberTotal]="'11'"></app-analytics-card>
+    <mat-card>
+      <app-pie-chart [data]="accepted" [categoryField]="'category'" [valueField]="'value'" [id]="'accepted'"
+        [graphTitle]="'Answered Questions'"></app-pie-chart>
+    </mat-card>
+    <mat-card>
+      <app-pie-chart [data]="rejected" [categoryField]="'category'" [valueField]="'value'" [id]="'rejected'"
+        [graphTitle]="'Rejected Questions'"></app-pie-chart>
+    </mat-card>
+    <mat-card>
+      <app-pie-chart [data]="duplicated" [categoryField]="'category'" [valueField]="'value'" [id]="'duplicated'"
+        [graphTitle]="'Duplicated Questions'"></app-pie-chart>
+    </mat-card>
+  </div>
+  <!--grid-->
+  <app-message-grid></app-message-grid>
+  <app-messages-details></app-messages-details>
 </div>
