--- a/src/app/components/message-grid/message-grid.component.html
+++ b/src/app/components/message-grid/message-grid.component.html
@@ -1,4 +1,4 @@
-<ag-grid-angular style="height: 200px;" class="ag-theme-balham" [rowData]="rowData" [columnDefs]="columnDefs"
+<ag-grid-angular style="height: 500px;" class="ag-theme-material" [rowData]="rowData" [columnDefs]="columnDefs"
   [modules]="modules" (gridReady)="onGridReady($event)" (rowClicked)="onRowClicked($event)">
 
 </ag-grid-angular>
