--- a/src/app/components/message-grid/checkbox/checkbox.component.html
+++ b/src/app/components/message-grid/checkbox/checkbox.component.html
@@ -1,3 +1,1 @@
-<div>
-    <input type="checkbox" [(ngModel)]="value">
-</div>
+<mat-checkbox [(ngModel)]="value" (change)="statusChanged()"></mat-checkbox>
