--- a/src/app/components/messages-list/messages-list.component.html
+++ b/src/app/components/messages-list/messages-list.component.html
@@ -1,33 +1,15 @@
-<div class="div-table">
-    <div class="div-table-row" *ngFor="let d of data1">
-       <div class="div-table-col">Header {{d.name}}</div>
-       <div class="div-table-col">{{d.position}}</div>
-       <div class="div-table-col">{{d.symbol}}</div>
-       <!-- <div class="div-table-col">{{d.weight}}</div> -->
-    </div>
-</div>
-
-<!--
-<div class="div-table">
-    <div class="div-table-row">
-       <div class="div-table-col" align="center">Customer ID</div>
-       <div  class="div-table-col">Customer Name</div>
-       <div  class="div-table-col">Customer Address</div>
-    </div>
-   <div class="div-table-row">
-         <div class="div-table-col">001</div>
-       <div class="div-table-col">002</div>
-       <div class="div-table-col">003</div>
-   </div>
-   <div class="div-table-row">
-       <div class="div-table-col">xxx</div>
-       <div class="div-table-col">yyy</div>
-       <div class="div-table-col">www</div>
-  </div>
-   <div class="div-table-row">
-       <div class="div-table-col">ttt</div>
-       <div class="div-table-col">uuu</div>
-       <div class="div-table-col">Mkkk</div>
-  </div>
-
-</div> -->
+<mat-accordion>
+    <mat-expansion-panel style="width: 250px;">
+        <mat-expansion-panel-header>
+            <mat-panel-title (click)="showMessages('ALL')">
+                Inbox ({{inbox}})
+            </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-list>
+            <mat-list-item (click)="showMessages('read')"> Read ({{read}}) </mat-list-item>
+            <mat-list-item (click)="showMessages('answered')"> Answered ({{answered}}) </mat-list-item>
+            <mat-list-item (click)="showMessages('duplicate')"> Duplicate ({{duplicate}}) </mat-list-item>
+            <mat-list-item (click)="showMessages('reject')"> Rejected ({{rejected}}) </mat-list-item>
+        </mat-list>
+    </mat-expansion-panel>
+</mat-accordion>
