--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,21 +1,38 @@
-<div fxLayout="column" fxLayoutGap="20px">
-  <div fxFlex fxLayout="row" fxLayout.xs="column" fxFlexFill fxLayoutGap="20px">
-    <app-analytics-card [contextType]="'Subscribers'" [numberTotal]="'121'"></app-analytics-card>
-    <app-analytics-card [contextType]="'Questions Answered'" [numberTotal]="'11'"></app-analytics-card>
-    <mat-card>
-      <app-pie-chart [data]="accepted" [categoryField]="'category'" [valueField]="'value'" [id]="'accepted'"
-        [graphTitle]="'Answered Questions'"></app-pie-chart>
-    </mat-card>
-    <mat-card>
-      <app-pie-chart [data]="rejected" [categoryField]="'category'" [valueField]="'value'" [id]="'rejected'"
-        [graphTitle]="'Rejected Questions'"></app-pie-chart>
-    </mat-card>
-    <mat-card>
-      <app-pie-chart [data]="duplicated" [categoryField]="'category'" [valueField]="'value'" [id]="'duplicated'"
-        [graphTitle]="'Duplicated Questions'"></app-pie-chart>
-    </mat-card>
+<div fxLayout="row" fxLayout.xs="column" fxLayoutGap="20px" fxLayoutAlign="space-between">
+  <div fxFlex="20">
+    <div fxLayout="column">
+      <p>Events:</p>
+      <mat-form-field style="width: 200px;">
+        <select #s (change)="eventChanged(s.value)" matNativeControl required>
+          <option *ngFor="let event of events" [value]="event.eventId">{{event.eventName}}</option>
+        </select>
+      </mat-form-field>
+    </div>
+
+    <app-messages-list></app-messages-list>
   </div>
-  <!--grid-->
-  <app-message-grid></app-message-grid>
+  <mat-spinner *ngIf="showSpinner"></mat-spinner>
+  <div fxLayout="column" fxLayoutGap="20px" *ngIf="!showSpinner">
+    <div fxFlex fxLayout="row" fxLayout.xs="column" fxFlexFill fxLayoutGap="20px">
+      <app-analytics-card [contextType]="'Subscribers'" [numberTotal]="'121'"></app-analytics-card>
+      <app-analytics-card [contextType]="'Questions Answered'" [numberTotal]="'11'"></app-analytics-card>
+      <mat-card>
+        <app-pie-chart [data]="accepted" [categoryField]="'category'" [valueField]="'value'" [id]="'accepted'"
+          [graphTitle]="'Answered Questions'"></app-pie-chart>
+      </mat-card>
+      <mat-card>
+        <app-pie-chart [data]="rejected" [categoryField]="'category'" [valueField]="'value'" [id]="'rejected'"
+          [graphTitle]="'Rejected Questions'"></app-pie-chart>
+      </mat-card>
+      <mat-card>
+        <app-pie-chart [data]="duplicated" [categoryField]="'category'" [valueField]="'value'" [id]="'duplicated'"
+          [graphTitle]="'Duplicated Questions'"></app-pie-chart>
+      </mat-card>
+    </div>
+    <!--grid-->
+
+    <app-message-grid></app-message-grid>
+  </div>
+
 
 </div>
