--- a/src/app/components/messages-details/messages-details.component.html
+++ b/src/app/components/messages-details/messages-details.component.html
@@ -1,8 +1,8 @@
-<div *ngIf='message'>
+<!-- <div *ngIf='message'>
   <h3>Message Details</h3>
   <p><strong>User:</strong> {{message.UserId}} </p>
   <p><strong>Status:</strong> {{message.MsgStatus}}</p>
   <p><strong>App:</strong> {{message.MsgAppType}} </p>
   <p><strong>Message:</strong> {{message.Message}}</p>
-</div>
- 
+</div> -->
+<mat-icon (click)="openParent()">more_horiz</mat-icon>
