grid updates fixed and chart hooked up with real time messages

--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -5,7 +5,7 @@
     </button>
   </div>
 
-  <button mat-button class="title">Event Monitor Dashboard</button>
+  <button mat-button class="title">CitiHacks Admin Dashboard</button>
 
   <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
     <ul fxLayout fxLayoutGap="20px">
